# rv-reporter

./: .env.sandbox.example  .gitignore  INSTALL.md  README.md  pyproject.toml  run_sandbox.ps1  run_sandbox.sh
configs/report_types/: jira_issue_portfolio.yaml  ms_biomarker_registry_health.yaml  network_queue_congestion.yaml  pm_export_health.yaml  twamp_session_health.yaml  wireshark_capture_health.yaml
docs/: UI_GUIDE.md  architecture.md  session_handoff_2026-02-16.md
samples/: ETX2i_twamp.csv  finance_variance.csv  network_queues.csv  ops_kpi.csv  pm-csv-es.csv  user_prefs_ops.json
scripts/: run_sandbox.ps1  run_sandbox.sh
src/rv_reporter/: __init__.py  cli.py  models.py  orchestrator.py  web.py
src/rv_reporter/providers/: anthropic_provider.py  base.py  mock_provider.py  openai_chat_provider.py  openai_provider.py
src/rv_reporter/rendering/: html_renderer.py  pdf_renderer.py
src/rv_reporter/report_types/: __init__.py  registry.py
src/rv_reporter/services/: cost_estimator.py  ingest.py  metrics.py  profiler.py  validator.py
src/rv_reporter/static/css/: app.css
src/rv_reporter/templates/: about.html  benchmark.html  confirm_cost.html  doc_view.html  events.html  index.html  layout.html  new_report_type.html  performance.html  prices.html  report_type_yaml_view.html  report_types.html  reports.html  result.html  view_json.html
tests/: test_pipeline.py  test_registry.py  test_renderer.py  test_web.py
